# sgx

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  sgxutils.py  test.py
App/: App.cpp  ops_sgx.cpp  ops_sim.cpp
Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave_private.pem  Enclave_public.pem
